# reactos

./: AMD64_BOOT_IMPROVEMENTS.md  AMD64_NATIVE_SEH_PROPOSAL.md  AMD64_PSEH3_GLOBAL_NAMESPACE_ANALYSIS.md  AMD64_SERVICE_FAILURE_ANALYSIS.md  AMD64_STACK_DEATH_ANALYSIS.md  AMD64_STACK_OVERFLOW_REPORT.md  ARM64_BOOTLOADER_STATUS.md  ARM64_FREELDR_IMPLEMENTATION.md  CLAUDE-nt10-api.md  CLAUDE-report-BSOD.md  CLAUDE.md  CMakeLists.txt  KERNEL_STACK_SIZE_IMPACT_ANALYSIS.md  WIN10_ADDITIONAL_FIXES.md  WIN10_BUILD_FIXES_COMPLETED.md  WIN10_BUILD_FIXES_FINAL.md  WIN10_BUILD_ISSUES.md  WIN10_BUILD_ISSUES_NEW.md  WIN10_BUILD_STATUS.md  WINDOWS_10_COMPATIBILITY_UPGRADE.md  WINDOWS_10_COMPATIBILITY_UPGRADE_COMPLETE.md  X64_KERNEL_BUG_FIXES.md  build_arm64_bootloader.sh  build_arm64_bootloader_standalone.sh  create_arm64_bootloader_simple.sh  create_arm64_image.sh  fix_archive.cmake  test_arm64_bootloader.sh  test_arm64_build.sh  test_native_seh.c  toolchain-arm64-stub.cmake  toolchain-gcc.cmake
base/applications/: CMakeLists.txt
base/applications/atactl/: atactl.cpp
base/applications/cmdutils/lodctr/: CMakeLists.txt
base/applications/cmdutils/schtasks/: CMakeLists.txt
base/applications/drwtsn32/: main.cpp
base/applications/fltmc/: CMakeLists.txt
base/applications/mscutils/devmgmt/: CMakeLists.txt
base/applications/mshta/: CMakeLists.txt
base/applications/mspaint/: CMakeLists.txt  history.cpp
base/applications/network/: CMakeLists.txt
base/applications/network/arp/: CMakeLists.txt
base/applications/network/finger/: CMakeLists.txt
base/applications/network/ftp/: cmds.c
base/applications/network/nslookup/: utility.c
base/applications/network/route/: CMakeLists.txt
base/applications/network/whois/: CMakeLists.txt
base/applications/regedt32/: CMakeLists.txt
base/applications/sdbinst/: CMakeLists.txt
base/ctf/msctf/: CMakeLists.txt
base/ctf/msctfime/: inputcontext.cpp
base/services/nfsd/: CMakeLists.txt  acl.c  service.c  symlink.c
base/services/shsvcs/: thmserver.c
base/shell/cmd/: for.c  misc.c  precomp.h
base/shell/filebrowser/: filebrowser.c
base/system/services/: rpcserver.c  services.c
base/system/smss/: sminit.c
boot/: boot_images.cmake
boot/bootdata/: bootcd.ini  livecd.ini
boot/freeldr/bootsect/: CMakeLists.txt
boot/freeldr/freeldr/: CMakeLists.txt  arm64img.cmake  bootmgr.c  custom.c  freeldr.c  oslist.c  pcat.cmake  rosload.cmake  uefi.cmake
boot/rtl/: blrtl.cmake
dll/appcompat/apphelp/: CMakeLists.txt
dll/appcompat/shims/: CMakeLists.txt
dll/appcompat/shims/genral/: CMakeLists.txt
dll/cpl/appwiz/: CMakeLists.txt
dll/cpl/mmsys/: sounds.c
dll/cpl/sysdm/: virtmem.c
dll/directx/d3d9/: d3d9.spec
dll/directx/dxgi/: dxgi.spec
dll/nls/normaliz/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/ldr/: ldrinit.c
dll/ntdll/rtl/: libsupp.c
dll/opengl/mesa/: clip.c
dll/shellext/: CMakeLists.txt
dll/shellext/netshell/: CMakeLists.txt
dll/shellext/zipfldr/: CMakeLists.txt
dll/win32/advapi32/: advapi32.spec
dll/win32/advapi32_vista/: CMakeLists.txt
dll/win32/atl/: CMakeLists.txt
dll/win32/atl100/: CMakeLists.txt
dll/win32/atl80/: CMakeLists.txt
dll/win32/avifil32/: CMakeLists.txt
dll/win32/bcrypt/: bcrypt.spec
dll/win32/comctl32/: CMakeLists.txt
dll/win32/crypt32/: CMakeLists.txt
dll/win32/dciman32/: dciman_main.c
dll/win32/framedyn/: CMakeLists.txt
dll/win32/hhctrl.ocx/: CMakeLists.txt
dll/win32/inseng/: CMakeLists.txt
dll/win32/jscript/: cc_parser.y  parser.y
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/kernelbase/: CMakeLists.txt
dll/win32/mmdevapi/: CMakeLists.txt
dll/win32/mscoree/: CMakeLists.txt
dll/win32/mshtml/: CMakeLists.txt
dll/win32/msi/: CMakeLists.txt
dll/win32/msimg32/: msimg32_main.c
dll/win32/msv1_0/: CMakeLists.txt
dll/win32/msvcrt/: msvcrt.spec  stubs.c
dll/win32/msxml3/: xslpattern.h  xslpattern.l  xslpattern.y
dll/win32/netcfgx/: CMakeLists.txt
dll/win32/objsel/: CMakeLists.txt
dll/win32/odbccp32/: CMakeLists.txt
dll/win32/ole32/: CMakeLists.txt  ole32.spec  ole32_win10_stubs.c  ole32_win10_stubs_extra.c
dll/win32/rsabase/: CMakeLists.txt
dll/win32/security/: CMakeLists.txt
dll/win32/shfolder/: CMakeLists.txt
dll/win32/softpub/: CMakeLists.txt
dll/win32/wmi/: CMakeLists.txt
documentation/: amd64-build-analysis-report.md  amd64-size-analysis.md  build-optimizations-todo.md
drivers/base/nmidebug/: CMakeLists.txt
hal/: CMakeLists.txt  hal.spec
hal/halarm64/: CMakeLists.txt  hal_arm64.rc
hal/halarm64/generic/: CMakeLists.txt  bus.c  gic.c  halinit.c  irql.c  misc.c  portio.c  processor.c  qspinlock.c  spinlock.c  stubs.c  timer.c
hal/halarm64/include/: hal.h
hal/halx86/: CMakeLists.txt  acpi.cmake
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec  ntoskrnl_arm64.rc  sysfuncs.lst
ntoskrnl/cc/: copy.c  fs.c  win10_stubs.c
ntoskrnl/config/: cmapi.c
ntoskrnl/dbgk/: dbgkobj.c  dbgkutil.c
ntoskrnl/ex/: handle.c  harderr.c  init.c  lookas.c  pushlock_win10.c  resource.c  sysinfo.c  timer.c  timer.c.backup  timer_ntsettimer.c  timer_win10.c  zw.S
ntoskrnl/fsrtl/: filelock.c  notify.c  oplock.c  pnp.c  win10_stubs.c
ntoskrnl/fstub/: fstubex.c
ntoskrnl/inbv/: inbv.c
ntoskrnl/io/: win10_stubs.c
ntoskrnl/kd64/: kdbreak.c  kddata.c  kdtrap.c
ntoskrnl/kdbg/: kdb.c  kdb_cli.c  kdb_expr.c
ntoskrnl/ke/: apc.c  balmgr.c  bug.c  dpc.c  gate.c  krnlinit.c  processor.c  procobj.c  thrdobj.c  thrdschd.c  time.c  wait.c  win10_stubs.c
ntoskrnl/lpc/: close.c  complete.c  connect.c  port.c  reply.c  send.c
ntoskrnl/mm/: balance.c  marea.c  pagefile.c
ntoskrnl/ob/: obhandle.c  obinit.c  obref.c
ntoskrnl/po/: power.c
ntoskrnl/ps/: debug.c  job.c  kill.c  process.c  query.c  security.c  thread.c  win10_stubs.c  win32.c
ntoskrnl/rtl/: libsupp.c
ntoskrnl/se/: token.c
ntoskrnl/vdm/: vdmexec.c
sdk/cmake/: arm64-windres-wrapper.sh  config.cmake  gcc.cmake
sdk/lib/cpprt/: CMakeLists.txt  gcc_compat.c
sdk/lib/cpprt/arm64/: cppnew.cpp  cpprt_stubs.c
(+333 files in other folders)
