
add_subdirectory(arp)
add_subdirectory(dwnl)
add_subdirectory(finger)
add_subdirectory(ftp)
add_subdirectory(ipconfig)
add_subdirectory(net)
add_subdirectory(netsh)
add_subdirectory(netstat)
add_subdirectory(nslookup)
add_subdirectory(ping)
add_subdirectory(route)
#add_subdirectory(telnet) # Disabled due to Vista condition variable linking issue with MinGW libgcc
add_subdirectory(tracert)
add_subdirectory(whois)
add_subdirectory(wlanconf)

